# rpmtracks

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: sonarqube.yml
rpmtracks/: manage.py
rpmtracks/apps/tracks/: admin.py  apps.py  forms.py  models.py  scraper.py  urls.py  views.py
rpmtracks/apps/tracks/management/commands/: scrape.py
rpmtracks/apps/tracks/migrations/: 0001_initial.py  0002_alter_track_number.py  0003_release_release_number_branding.py  0004_alter_track_workout.py  0005_rename_started_at_release_release_date_and_more.py  0006_rename_notes_track_remarks.py  0007_alter_track_workout.py  0008_release_order_track_order.py  0009_populate_order.py
rpmtracks/rpmtracks/: asgi.py  settings.py  urls.py  wsgi.py
rpmtracks/templates/: about.html  base.html
rpmtracks/templates/tracks/: search.html  track_detail.html  track_list.html
