[project]
name = "rpmtracks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "django>=5.2.9",
    "environs[django]>=14.3.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
